--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -51,6 +51,27 @@ layout: default
 
                 <hr>
 
+                {% if page.comments != false %}
+                	<!-- 来必力City版安装代码 -->
+                	<div id="lv-container" data-id="city" data-uid="MTAyMC8yODc2Ni81MzM3">
+                		<script type="text/javascript">
+                	   (function(d, s) {
+                	       var j, e = d.getElementsByTagName(s)[0];
+
+                	       if (typeof LivereTower === 'function') { return; }
+
+                	       j = d.createElement(s);
+                	       j.src = 'https://cdn-city.livere.com/js/embed.dist.js';
+                	       j.async = true;
+
+                	       e.parentNode.insertBefore(j, e);
+                	   })(document, 'script');
+                		</script>
+                	<noscript> 为正常使用来必力评论功能请激活JavaScript</noscript>
+                	</div>
+                	<!-- City版安装代码已完成 -->
+                	{% endif %}
+<!--
                 {% if site.duoshuo_share && site.duoshuo_username %}
                 <!-- 多说 Share start -->
                 </style>
@@ -110,7 +131,7 @@ layout: default
                 </div>
                 <!-- disqus 评论框 end -->
                 {% endif %}
-
+ -->
             </div>
 
     <!-- Sidebar Container -->
@@ -170,6 +191,7 @@ layout: default
 </script>
 <!-- 多说公共JS代码 end -->
 {% endif %}
+
 
 
 {% if site.disqus_username %}
