--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -71,7 +71,8 @@ layout: default
                 	</div>
                 	<!-- City版安装代码已完成 -->
                 	{% endif %}
-<!--
+                  
+<!--  多说即将关闭，多说分享和评论删除。
                 {% if site.duoshuo_share && site.duoshuo_username %}
                 <!-- 多说 Share start -->
                 </style>
