--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="{{ site.description }}">
     <meta name="keyword"  content="{{ site.keyword }}">
-    <link rel="shortcut icon" href="{{ site.baseurl }}/img/favicon.ico">
+    <!-- <link rel="shortcut icon" href="{{ site.baseurl }}/img/favicon.ico"> -->
+    <LINK rel="Bookmark" href="http://uploadico.55.la/upload/ico/2017/05/21/16/00_1495357137.ico" >
 
     <title>{% if page.title %}{{ page.title }} - {{ site.SEOTitle }}{% else %}{{ site.SEOTitle }}{% endif %}</title>
 
