--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -22,7 +22,8 @@
             <div class="navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="{{ site.baseurl }}/">Home</a>
+                        <!-- <a href="{{ site.baseurl }}/">Home</a> -->
+                        <a href="{{ site.url }}/">Home</a>
                     </li>
                     {% for page in site.pages %}{% if page.title %}
                     <li>
