feat: 全面优化博客并新增量化交易指南
代码优化:
- CDN链接升级为HTTPS
- 删除废弃的多说/Disqus评论代码
- 清理无效favicon链接和示例friends
- 清理footer无效链接
- 清理about.html恶搞内容
- 添加sitemap.xml和robots.txt
- 启用RSS feed

新增内容:
- 新增量化交易入门指南博客（约2500字）

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="{{ site.description }}">
     <meta name="keyword"  content="{{ site.keyword }}">
-    <!-- <link rel="shortcut icon" href="{{ site.baseurl }}/img/favicon.ico"> -->
-    <LINK rel="Bookmark" href="http://uploadico.55.la/upload/ico/2017/05/21/16/00_1495357137.ico" >
+    <link rel="shortcut icon" href="{{ site.baseurl }}/img/favicon.ico">
 
     <title>{% if page.title %}{{ page.title }} - {{ site.SEOTitle }}{% else %}{{ site.SEOTitle }}{% endif %}</title>
 
@@ -38,7 +37,7 @@
     <!-- Custom Fonts -->
     <!-- <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"> -->
     <!-- Hux change font-awesome CDN to qiniu -->
-    <link href="http://cdn.staticfile.org/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://cdn.staticfile.org/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
 
     <!-- Hux Delete, sad but pending in China
