--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -72,12 +72,7 @@
                 <p class="copyright text-muted">
                     Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}
                     <br>
-                    Powered by <a href="http://codeclub.bid">Jackson</a> |
-                    <iframe
-                        style="margin-left: 2px; margin-bottom:-5px;"
-                        frameborder="0" scrolling="0" width="91px" height="20px"
-                        src="https://ghbtns.com/github-btn.html?user=jacksoncode&repo=jacksoncode.github.io&type=star&count=true" >
-                    </iframe>
+                    Powered by <a href="https://github.com/jacksoncode">Jackson</a>
                 </p>
             </div>
         </div>
@@ -167,7 +162,7 @@ document.addEventListener("DOMContentLoaded", function() {
 
 <!--fastClick.js -->
 <script>
-    async("http://cdn.bootcss.com/fastclick/1.0.6/fastclick.min.js", function(){
+    async("https://cdn.bootcss.com/fastclick/1.0.6/fastclick.min.js", function(){
         var $nav = document.querySelector("nav");
         if($nav) FastClick.attach($nav);
     })
